// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay Overlayが正常にrenderできることを確認: render直後 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "bottom": 0,
      "flex": 1,
      "height": 1334,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="overlayAnimatedView"
>
  <Text
    testID="text"
  >
    test
  </Text>
</View>
`;

exports[`Overlay Overlayが正常にrenderできることを確認: フェードアウト後 1`] = `null`;

exports[`Overlay Overlayが正常にrenderできることを確認: フェードイン後 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "bottom": 0,
      "flex": 1,
      "height": 1334,
      "justifyContent": "center",
      "opacity": 1,
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="overlayAnimatedView"
>
  <Text
    testID="text"
  >
    test
  </Text>
</View>
`;
